--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,6 +5,14 @@ galaxy_info:
   license: Apache
   min_ansible_version: 2.2.2
   platforms:
+  - name: Debian
+    versions:
+    - jessie
+    - stretch
+  - name: Ubuntu
+    versions:
+    - trusty
+    - xenial
   - name: EL
     versions:
     - 7
