--- a/tasks/install-redhat.yml
+++ b/tasks/install-redhat.yml
@@ -20,11 +20,11 @@
 - name: RHEL Install GitLab Repo
   yum_repository:
     description: GitLab Runner Repo
-    name: runner_gitlab-ci-multi-runner
-    baseurl: "https://packages.gitlab.com/runner/gitlab-ci-multi-runner/el/{{ ansible_distribution_major_version }}/$basearch"
+    name: runner_gitlab-runner
+    baseurl: "https://packages.gitlab.com/runner/gitlab-runner/el/{{ ansible_distribution_major_version }}/$basearch"
     repo_gpgcheck: yes
     gpgcheck: no
-    gpgkey: https://packages.gitlab.com/runner/gitlab-ci-multi-runner/gpgkey
+    gpgkey: https://packages.gitlab.com/runner/gitlab-runner/gpgkey
     sslverify: yes
     sslcacert: /etc/pki/tls/certs/ca-bundle.crt
   notify:
@@ -33,7 +33,7 @@
 
 - name: RHEL Install GitLab runner
   package:
-    name: gitlab-ci-multi-runner
+    name: gitlab-runner
     state: latest
   environment: "{{ gitlab_runner_proxy_env }}"
   become: yes
