Smooth upgrade to gitlab-runner 10.x

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,11 @@
 ---
 - name: gitlab_runner yum makecache
-  shell:  yum -q makecache -y --disablerepo='*' --enablerepo='runner_gitlab-ci-multi-runner'
+  shell:  yum -q makecache -y --disablerepo='*' --enablerepo='runner_gitlab-runner'
+  environment: "{{ gitlab_runner_proxy_env }}"
+  become: yes
+
+# https://gitlab.com/gitlab-org/gitlab-runner/issues/2786
+- name:  gitlab_runner service file workaround
+  shell: /usr/share/gitlab-runner/post-install
   environment: "{{ gitlab_runner_proxy_env }}"
   become: yes
