--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,6 +4,10 @@
   environment: "{{ gitlab_runner_proxy_env }}"
   become: yes
 
+- name: gitlab_runner yum clean metadata
+  shell:  yum clean metadata
+  become: yes
+
 # https://gitlab.com/gitlab-org/gitlab-runner/issues/2786
 - name:  gitlab_runner service file workaround
   shell: /usr/share/gitlab-runner/post-install
