--- a/tasks/install-debian.yml
+++ b/tasks/install-debian.yml
@@ -16,7 +16,7 @@
     url: https://packages.gitlab.com/install/repositories/runner/gitlab-runner/script.deb.sh
     dest: "{{ t.path }}/script.deb.sh"
     mode: '0755'
-  environment: "{{ gitlab_runner_proxy_env }}"
+  environment: "{{ proxy_env }}"
   when: not apt_repo.stat.exists
 
 - name: Remove old GitLab repo
@@ -28,7 +28,7 @@
   command: "{{ t.path }}/script.deb.sh"
   args:
     creates: /etc/apt/sources.list.d/runner_gitlab-runner.list
-  environment: "{{ gitlab_runner_proxy_env }}"
+  environment: "{{ proxy_env }}"
   when: not apt_repo.stat.exists
   become: yes
 
@@ -36,5 +36,5 @@
   package:
     name: gitlab-runner
     state: latest
-  environment: "{{ gitlab_runner_proxy_env }}"
+  environment: "{{ proxy_env }}"
   become: yes
