--- a/tasks/install-redhat.yml
+++ b/tasks/install-redhat.yml
@@ -4,14 +4,14 @@
   rpm_key:
     state: present
     key: https://packages.gitlab.com/gpg.key
-  environment: "{{ gitlab_runner_proxy_env }}"
+  environment: "{{ proxy_env }}"
   become: yes
 
 - name: RHEL Install GitLab dependencies
   package:
     name: "{{ item }}"
     state: present
-  environment: "{{ gitlab_runner_proxy_env }}"
+  environment: "{{ proxy_env }}"
   become: yes
   with_items:
     - pygpgme
@@ -47,5 +47,5 @@
     state: latest
   notify:
     - gitlab_runner service file workaround
-  environment: "{{ gitlab_runner_proxy_env }}"
+  environment: "{{ proxy_env }}"
   become: yes
